<resources>
    <string name="app_name">Collecting Application</string>
<!--  Справочник. Выпечка  -->
    <string name="default_unit">kg</string>
    <string name="bake_name_hint">Enter a name</string>
    <string name="bake_name_label">Name</string>
    <string name="bake_unit_hint">Enter a unit</string>
    <string name="bake_unit_label">Unit</string>
    <string name="bake_weigh_hint">Enter a weigh apiece bake</string>
    <string name="bake_weigh_label">Weigh, kg (if unit is pieces)</string>
    <string name="bake_price_hint">Enter a price</string>
    <string name="bake_price_label">Price</string>
<!--  Справочник. Магазин  -->
    <string name="shop_name_hint">Enter a name of shop</string>
    <string name="shop_name_label">Name shop</string>
    <string name="shop_address_hint">Enter address</string>
    <string name="shop_address_label">Address</string>
    <string name="shop_phone_hint">Enter a phone number</string>
    <string name="shop_phone_label">Phone number</string>
    <string name="shop_contact_hint">Enter a contact person name</string>
    <string name="shop_contact_label">Contact person name</string>
<!--  Заказы  -->
    <string name="shop_request_count_positions">Count of positions:</string>
    <string name="shop_request_total_weight">Total weight:</string>


</resources>