<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/shop_name_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bake_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bake_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bake_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_name_label_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bake_unit_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bake_unit_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bake_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bake_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bake_unit_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bake_unit_label_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bake_weigh_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bake_weigh_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bake_unit" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bake_weigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bake_weigh_hint"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bake_weigh_label_text_view" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bake_price_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bake_price_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bake_weigh" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/bake_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bake_price_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bake_price_label_text_view"
        tools:text="1.00" />

</androidx.constraintlayout.widget.ConstraintLayout>