<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/shop_name_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_name_label_text_view" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/shop_address_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_address_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/shop_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_address_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_address_label_text_view" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/shop_phone_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_phone_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_address" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/shop_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_phone_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_phone_label_text_view"
        tools:text="+7(999)999-99-99" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/shop_contact_label_text_view"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_contact_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_phone" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/shop_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shop_contact_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_contact_label_text_view"
        tools:text="Иванов Петров Сидоров" />

</android.support.constraint.ConstraintLayout>